[tool.poetry]
name = "cw-module3"
version = "0.1.0"
description = ""
authors = ["tare0n <msktareo@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_module3"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
get-sorted = 'cw_module3.main:get_sorted'
get-banch = 'cw_module3.main:get_banch'